--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body{ background-image: url(https://c4.wallpaperflare.com/wallpaper/232/230/447/1920x1080-px-bit-pixel-art-pokemon-wallpaper-preview.jpg); 
+body{ 
+    background-image: url(https://c4.wallpaperflare.com/wallpaper/232/230/447/1920x1080-px-bit-pixel-art-pokemon-wallpaper-preview.jpg); 
     background-repeat: no-repeat;  
-    background-size: cover; 
 }
 
 h1{
