--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a{
     font-width: bold; /*сделаем текст ссылок пошире*/
 }*
  
-@keyframes textAnimation  {
+@keyframes textAnimation {
     0% {
         transform: scale(1);
         color: #007bff;
@@ -35,7 +35,15 @@ a{
     100% {
         transform: scale(1);
         color: #007bff;
-    } /*Добавим анимацию при наведении курсора на ссылку*/
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    animation: textAnimation 0.6s forwards; /* Анимация при наведении */
 }
 
 a {
