--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ a{
     font-size: larger; /*Делаем ссылки пожирнее*/
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*Сделаем шрифт ссылок*/
     font-width: bold; /*сделаем текст ссылок пошире*/
-}*
+     animation: textAnimation 0.6s forwards;
+}
  
 @keyframes textAnimation {
     0% {
@@ -42,7 +43,7 @@ a {
     text-decoration: none;
 }
 
-li:hover {
+a:hover {
     animation: textAnimation 0.6s forwards; /* Анимация при наведении */
 }
 
