--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a{
     font-size: larger; /*Делаем ссылки пожирнее*/
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*Сделаем шрифт ссылок*/
     font-width: bold; /*сделаем текст ссылок пошире*/
-     animation: textAnimation 0.6s forwards;
+     animation: textAnimation 0.6s infinity;
 }
  
 @keyframes textAnimation {
