--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ li {
 a{
     text-decoration: none;   list-style-type: none;
     color: rgb(0, 162, 255); /* Меняем цвета ссылок*/
-    font-size: larger; /*Делаем ссылки пожирнее*/
+    font-size: 32px; /*Делаем ссылки пожирнее*/
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*Сделаем шрифт ссылок*/
     font-width: bold; /*сделаем текст ссылок пошире*/
 }
