--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{ 
-    background-image: url(https://c4.wallpaperflare.com/wallpaper/232/230/447/1920x1080-px-bit-pixel-art-pokemon-wallpaper-preview.jpg); /*Добавляем фон сайту*/
+    background-image: url(https://github.com/yurevvn/WSitewHM/blob/main/fonn.jpg?raw=true); /*Добавляем фон сайту*/
     background-repeat: no-repeat;  /*Чтобы фон не повторялся*/
     background-size: cover; /*Растягиваем изображение на весь фон сайта*/
 }
