--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     background-image: url(https://github.com/yurevvn/WSitewHM/blob/main/fonn.jpg?raw=true); /*Добавляем фон сайту*/
     background-repeat: no-repeat;  /*Чтобы фон не повторялся*/
     background-size: cover; /*Растягиваем изображение на весь фон сайта*/
+    background-attachment: fixed
 }
 
 h1{
@@ -13,53 +14,49 @@ h1{
 li {
     list-style-type: none; /* Убираем нижнее подчеркивание у ссылок*/
     padding: 0; 
-    margin: 0; 
+    margin: 10px 0; /* Увеличиваем отступы между кнопками */
 }
 
-a{
-    text-decoration: none;   list-style-type: none;
-    color: rgb(0, 162, 255); /* Меняем цвета ссылок*/
-    font-size: 23px; /*Делаем ссылки пожирнее*/
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*Сделаем шрифт ссылок*/
-    font-width: bold; /*сделаем текст ссылок пошире*/
+a {
+    font-size: 23px; /* Увеличиваем размер текста ссылок */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: inline-block; /* Делаем ссылку блочным элементом для настройки размеров */
+    padding: 6px 12px; /* Отступы внутри кнопки */
+    background-color: #642727; /* Цвет фона кнопки */
+    color: #c5aa60; /* Цвет текста */
+    text-decoration: none; /* Убираем подчеркивание */
+    border-radius: 25px; /* Овальная форма кнопки */
+    transition: background-color 0.3s; /* Плавный переход цвета при наведении */
 }
  
 @keyframes textAnimation {
     0% {
         transform: scale(1);
-        color: #007bff;
+        color: #330b01;
     }
     50% {
         transform: scale(1.1);
-        color: rgb(100, 160, 220);
+        color: rgb(80, 10, 10);
     }
     100% {
         transform: scale(1);
-        color: #007bff;
+        color: #330b01;
     } /*Добавим анимацию текста при наведении курсором на ссылку*/
 }
 
-a {
-    text-decoration: none;
-}
-
 a:hover {
-    animation: textAnimation 0.6s forwards; /* Анимация при наведении */
-}
-
-a {
-    text-decoration: none; /* Уберем точки справа от ссылок (от ненумерованных списков)*/
+    background-color: #300101; /* Цвет фона кнопки при наведении */
 }
 
 @keyframes rainbow  /*добавим ргб подсветку к заголовку*/ {
-    0% { color: rgb(14, 124, 0); }
-    14% { color: rgb(0, 250, 21); }
-    28% { color: rgb(0, 255, 242); }
-    42% { color: rgb(0, 102, 128); }
-    57% { color: blue; }
-    71% { color: indigo; }
-    85% { color: rgb(0, 250, 54); }
-    100% { color: rgb(14, 124, 0); } /* добавим ргб подсветку к заголовку*/
+    0% { color: #642727; }
+    14% { color: rgb(104, 0, 0); }
+    28% { color: rgb(160, 21, 21); }
+    42% { color: rgb(177, 148, 75); }
+    57% { color: rgb(75, 66, 41); }
+    71% { color: rgb(95, 73, 32); }
+    85% { color: rgb(104, 0, 0) }
+    100% { color: rgb(49, 0, 0); } /* добавим ргб подсветку к заголовку*/
 } 
 
 .rainbow-text {
